--- a/src/components/voucher/voucher.css
+++ b/src/components/voucher/voucher.css
@@ -27,9 +27,6 @@
   transition: all 0.2s;
 }
 
-.delete-btn {
-}
-
 .voucher-btn:hover,
 .voucher-btn:focus {
   color: #ffffff;
